@@ -1,3 +1,5 @@
 GAIM: Items to be fixed
 ------------------------
-
+For the Permit/Deny Stuff, everything is working, except for "Deny people in 'Deny'",
+which sucks for people like me who have 16 people in their deny list. The Oscar side
+of things is broken beyond repair too.
